[package]
name = "precious"
authors.workspace = true
description = "One code quality tool to rule them all"
documentation = "https://github.com/houseabsolute/precious"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
categories = ["development-tools"]
keywords = ["beautifier", "linter", "pretty-printer", "tidier"]

[workspace.package]
authors = ["Dave Rolsky <autarch@urth.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseabsolute/precious"
version = "0.7.3"

[[bin]]
name = "precious"
path = "precious/src/main.rs"
doc = false

[dependencies]
log.workspace = true
precious-core.workspace = true

[workspace.dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo", "derive", "wrap_help"] }
clean-path = "0.2.1"
comfy-table = "7.1.4"
env_logger = "0.11.7"
fern = { version = ">= 0.5.0, < 0.7.0", features = ["colored"] }
filetime = "0.2.25"
ignore = "0.4.23"
indexmap = { version = "2.8.0", features = ["serde"] }
itertools = ">= 0.9.0, < 0.11.0"
log = "0.4.26"
md5 = "0.7.0"
pathdiff = "0.2.3"
precious-core = { version = "0.7.3", path = "./precious-core" }
precious-helpers = { version = "0.7.3", path = "./precious-helpers" }
precious-testhelper = { version = "0.7.3", path = "./precious-testhelper" }
pretty_assertions = "1.4.1"
prettytable = "0.10.0"
pushd = "0.0.2"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serial_test = "3.2.0"
tempfile = "3.18.0"
test-case = "3.3.1"
thiserror = "2.0.12"
toml = "0.8.20"
which = ">= 3.0.0, < 5.0.0"

[workspace]
members = ["precious-helpers", "precious-core", "precious-integration", "precious-testhelper"]

[package.metadata.release]
tag-name = "v{{version}}"
