[package]
name = "precious"
authors.workspace = true
description = "One code quality tool to rule them all"
documentation = "https://github.com/houseabsolute/precious"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
categories = ["development-tools"]
keywords = ["beautifier", "linter", "pretty-printer", "tidier"]

[workspace.package]
authors = ["Dave Rolsky <autarch@urth.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseabsolute/precious"
version = "0.10.1"

[[bin]]
name = "precious"
path = "precious/src/main.rs"
doc = false

[dependencies]
log.workspace = true
precious-core.workspace = true

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
bon = { version = "3.8.1", default-features = false }
clap = { version = "4.5.50", default-features = false, features = [
    "cargo",
    "derive",
    "std",
    "wrap_help",
] }
clean-path = { version = "0.2.1", default-features = false }
comfy-table = { version = "7.2.1", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
fern = { version = ">= 0.5.0, < 0.7.0", default-features = false, features = ["colored"] }
filetime = { version = "0.2.26", default-features = false }
ignore = { version = "0.4.24", default-features = false }
indexmap = { version = "2.12.0", default-features = false, features = ["serde", "std"] }
itertools = { version = "0.14.0", default-features = true }
libc = { version = "0.2.177", default-features = false }
log = { version = "0.4.28", default-features = false }
md5 = { version = "0.8.0", default-features = false }
mitsein = { version = "0.8.0", default-features = false, features = ["itertools", "std"] }
pathdiff = { version = "0.2.3", default-features = false }
precious-core = { version = "0.10.1", path = "./precious-core" }
precious-helpers = { version = "0.10.1", path = "./precious-helpers" }
precious-testhelper = { version = "0.10.1", path = "./precious-testhelper" }
pretty_assertions = { version = "1.4.1", default-features = true }
prettytable = { version = "0.10.0", default-features = false }
pushd = { version = "0.0.2", default-features = false }
rayon = { version = "1.11.0", default-features = false }
regex = { version = "1.12.2", default-features = true }
serde = { version = "1.0.228", default-features = true, features = ["derive"] }
serial_test = { version = "3.2.0", default-features = false }
tempfile = { version = "3.23.0", default-features = false }
test-case = { version = "3.3.1", default-features = false }
thiserror = { version = "2.0.17", default-features = true }
toml = { version = "0.9.8", default-features = false, features = [
    "parse",
    "preserve_order",
    "serde",
] }
which = { version = ">= 3.0.0, < 5.0.0", default-features = false }

[workspace]
members = ["precious-helpers", "precious-core", "precious-integration", "precious-testhelper"]

[package.metadata.release]
tag-name = "v{{version}}"
