[package]
name = "precious-core"
authors.workspace = true
description = "The core of precious as a library - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.2.22", features = [ "cargo", "derive" ] }
clean-path = "0.2.1"
fern = { version = ">= 0.5.0, < 0.7.0", features = ["colored"] }
globset = "0.4.8"
ignore = "0.4.18"
indexmap = { version = "1.8.0", features = ["serde"] }
itertools = ">= 0.9.0, < 0.11.0"
log = "0.4.14"
md5 = "0.7.0"
once_cell = "1.6.0"
precious-helpers = { version = "0.3.0", path = "../precious-helpers" }
rayon = "1.5.1"
regex = "1.6.0"
serde = { version = "1.0.136", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.30"
toml = "0.5.8"
which = ">= 3.0.0, < 5.0.0"

[dev-dependencies]
precious-testhelper = { version = "0.3.0", path = "../precious-testhelper" }
pretty_assertions = "1.1.0"
serial_test = "0.9.0"
