[package]
name = "precious-core"
authors.workspace = true
description = "The core of precious as a library - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "3.2.22", features = [ "cargo", "derive" ] }
clean-path = "0.2.1"
fern = { version = ">= 0.5.0, < 0.7.0", features = ["colored"] }
globset = "0.4.8"
ignore = "0.4.18"
indexmap = { version = "1.8.0", features = ["serde"] }
itertools = ">= 0.9.0, < 0.11.0"
log.workspace = true
md5 = "0.7.0"
once_cell.workspace = true
pathdiff.workspace = true
precious-helpers.workspace = true
rayon = "1.5.1"
regex.workspace = true
serde = { version = "1.0.136", features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
toml = "0.5.8"
which.workspace = true

[dev-dependencies]
filetime = "0.2.18"
precious-testhelper.workspace = true
pretty_assertions.workspace = true
serial_test.workspace = true
test-case.workspace = true
