[package]
name = "precious-core"
authors.workspace = true
description = "The core of precious as a library - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clean-path.workspace = true
fern.workspace = true
globset.workspace = true
ignore.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
md5.workspace = true
once_cell.workspace = true
pathdiff.workspace = true
precious-helpers.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
which.workspace = true

[dev-dependencies]
filetime.workspace = true
precious-testhelper.workspace = true
pretty_assertions.workspace = true
serial_test.workspace = true
test-case.workspace = true
