[package]
name = "precious-helpers"
authors.workspace = true
description = "A helper library for precious - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.53"
log = "0.4.14"
regex = "1.6.0"
thiserror = "1.0.30"
which = ">= 3.0.0, < 5.0.0"

[dev-dependencies]
pretty_assertions = "1.1.0"
serial_test = "0.9.0"
tempfile = "3.3.0"
