[package]
name = "precious-helpers"
authors.workspace = true
description = "A helper library for precious - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
itertools.workspace = true
log.workspace = true
regex.workspace = true
thiserror.workspace = true
which.workspace = true

[dev-dependencies]
libc.workspace = true
pretty_assertions.workspace = true
serial_test.workspace = true
tempfile.workspace = true
test-case.workspace = true

[lints]
workspace = true
