[package]
name = "precious-integration"
version = "0.3.0"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "Integration tests for precious"
repository = "https://github.com/houseabsolute/precious"
license = "MIT OR Apache-2.0"
edition = "2018"

[dev-dependencies]
anyhow = "1.0.53"
regex = "1.6.0"
precious-core = { version = "0.3.0", path = "../precious-core" }
precious-helpers = { version = "0.3.0", path = "../precious-helpers" }
precious-testhelper = { version = "0.3.0", path = "../precious-testhelper" }
serial_test = "0.9.0"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
