[package]
name = "precious-integration"
authors.workspace = true
description = "Integration tests for precious - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
anyhow = "1.0.53"
regex = "1.6.0"
precious-core = { version = "0.3.0", path = "../precious-core" }
precious-helpers = { version = "0.3.0", path = "../precious-helpers" }
precious-testhelper = { version = "0.3.0", path = "../precious-testhelper" }
serial_test = "0.9.0"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
