[package]
name = "precious-integration"
authors.workspace = true
description = "Integration tests for precious - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dev-dependencies]
anyhow.workspace = true
regex.workspace = true
precious-core.workspace = true
precious-helpers.workspace = true
precious-testhelper.workspace = true
serial_test.workspace = true

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
