[package]
name = "precious-testhelper"
version = "0.3.0"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "A helper library for precious tests - not for external use"
repository = "https://github.com/houseabsolute/precious"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.53"
env_logger = "0.9.1"
log = "0.4.14"
once_cell = "1.6.0"
precious-exec = { version = "0.3.0", path = "../precious-exec" }
regex = "1.6.0"
tempfile = "3.3.0"
