[package]
name = "precious-testhelper"
authors.workspace = true
description = "A helper library for precious tests - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.53"
env_logger = "0.9.1"
log = "0.4.14"
once_cell = "1.6.0"
precious-helpers = { version = "0.3.0", path = "../precious-helpers" }
regex = "1.6.0"
tempfile = "3.3.0"
