[package]
name = "precious-testhelper"
authors.workspace = true
description = "A helper library for precious tests - not for external use"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
precious-helpers.workspace = true
pushd.workspace = true
regex.workspace = true
tempfile.workspace = true
