[package]
name = "precious"
version = "0.2.1"
authors = ["Dave Rolsky <autarch@urth.org>"]
description = "One code quality tool to rule them all"
repository = "https://github.com/houseabsolute/precious"
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "precious"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4.14"
precious-core = { version = "0.2.1", path = "../precious-core" }
